Fortran/IBM/execute/F2008/intrinsics/error/unit_tests/erfc_scaled02a.scenario
#BEGINSCENARIO
#BEGINDOC
#NAME=F2008/intrinsics/error/unit_tests/erfc_scaled02a.scenario
#FEATURE = F2008 ERFC_SCALED intrinsic
#DATE    = 20110501
#TEST_TYPE=unit
#ENDDOC

#BEGINCONTROL

#CMD       = F_COMPILE
#INPUT     = $(tcasedir)erfc_scaled02a.f
#OUTPUT    = erfc_scaled02a$(OBJ)
#ENDCMD

#CMD       = F_LINK
#INPUT     = erfc_scaled02a$(OBJ)
#OUTPUT    = erfc_scaled02a$(EXE)
#ENDCMD

#CMD       = RUN
#INPUT     = erfc_scaled02a$(EXE)
#ENDCMD

#ENDCONTROL
#ENDSCENARIO
